--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "install": "^0.13.0",
+        "npm": "^10.8.3",
+        "sweetalert2": "^11.14.0"
     }
 }
